--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,3 +55,12 @@ img {
 main.main-content {
   min-height: 650px;
 }
+
+/* 모달 배경 */
+.ReactModal__Overlay {
+  background-color: rgba(0, 0, 0, 0.3) !important;
+}
+.ReactModal__Overlay .org-image {
+  width: 100% !important;
+  height: auto !important;
+}
