--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mansalva&family=Noto+Sans+KR:wght@100..900&display=swap');
+@font-face {
+  font-family: 'KyoboHandwriting2019';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/KyoboHand.woff')
+    format('woff');
+  font-weight: normal;
+  font-display: swap;
+}
 
 * {
   box-sizing: border-box;
@@ -12,9 +19,19 @@
 }
 
 .fixed-font {
-  font-family: "Marcellus SC", serif;
+  font-family: 'Marcellus SC', serif;
   font-weight: 400;
   font-style: normal;
+}
+
+.title-font {
+  font-family: 'KyoboHandwriting2019', sans-serif;
+  font-weight: 600;
+}
+
+.content-font {
+  font-family: 'KyoboHandwriting2019', sans-serif;
+  font-weight: 400;
 }
 
 html {
