분리수거 결과 페이지 스타일링

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,20 @@
   font-weight: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: 'BinggreIi';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Binggrae-Bold.woff')
+    format('woff');
+  font-weight: 700;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'SchoolSafetyNotification';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimAllimjangTTF-R.woff2')
+    format('woff2');
+  font-weight: 400;
+  font-display: swap;
+}
 
 * {
   box-sizing: border-box;
@@ -31,6 +45,16 @@
 
 .content-font {
   font-family: 'KyoboHandwriting2019', sans-serif;
+  font-weight: 400;
+}
+
+.binggre {
+  font-family: 'BinggreIi', sans-serif;
+  font-weight: normal;
+}
+
+.school {
+  font-family: 'SchoolSafetyNotification';
   font-weight: 400;
 }
 
